--- a/styles/style.css
+++ b/styles/style.css
@@ -8,7 +8,7 @@
     margin: auto;
     width:300px;
     text-align: center;
-    color: blanchedalmond;
+    color: rgb(231, 231, 231);
 }
 
 #buttons{
@@ -19,7 +19,7 @@
 }
 
 #container{
-    background-color:rgb(255, 255, 255);
+    /* background-color:rgb(255, 255, 255); */
     width:300px;
     height: 600px;
     margin: auto;
@@ -27,19 +27,25 @@
 
 
 #play-btn{
-    background-color:cornsilk;
+    background-color:rgb(236, 251, 255);
     width:100px;
     height: 30px;
 }
 
 #play-btn:hover{
-    background-color:rgb(250, 237, 185);
+    background-color:rgb(217, 244, 255);
     width:120px;
     height: 35px;
 }
 
 #play-btn:active{
-    background-color:rgb(184, 173, 133);
+    background-color:rgb(183, 198, 218);
     width:100px;
     height: 30px;
+}
+
+td {
+    background-color: aquamarine;
+    height: 25px;
+    width: 25px;
 }
