--- a/styles/style.css
+++ b/styles/style.css
@@ -1,5 +1,5 @@
 *{
-    background-color: black;
+    /* background-color: black; */
     font-family: Arial, Helvetica, sans-serif;
 
 }
@@ -48,4 +48,8 @@ td {
     background-color: aquamarine;
     height: 25px;
     width: 25px;
+}
+
+.none{
+    display: none;
 }
