--- a/styles/style.css
+++ b/styles/style.css
@@ -18,7 +18,7 @@
     text-align: center;
 }
 
-#container{
+#container, #container2{
     /* background-color:rgb(255, 255, 255); */
     width:300px;
     height: 600px;
@@ -53,3 +53,4 @@ td {
 .none{
     display: none;
 }
+
