--- a/styles/style.css
+++ b/styles/style.css
@@ -20,7 +20,7 @@
 
 #container, #container2{
     /* background-color:rgb(255, 255, 255); */
-    width:300px;
+    width:360px;
     height: 600px;
     margin: auto;
 }
@@ -44,10 +44,14 @@
     height: 30px;
 }
 
+tr{
+    height: 30px;
+}
+
 td {
     background-color: aquamarine;
-    height: 25px;
-    width: 25px;
+    height: 30px;
+    width: 30px;
 }
 
 .none{
