--- a/styles/style.css
+++ b/styles/style.css
@@ -1,5 +1,5 @@
 *{
-    /* background-color: black; */
+    background-color: black;
     font-family: Arial, Helvetica, sans-serif;
 
 }
@@ -59,5 +59,9 @@ td {
 }
 
 #piece-active{
-    background-color: brown;
+    background-color: rgb(247, 93, 234);
+}
+
+#piece-placed{
+    background-color: rgb(82, 82, 82);
 }
