--- a/styles/style.css
+++ b/styles/style.css
@@ -1,6 +1,7 @@
 *{
     background-color: black;
     font-family: Arial, Helvetica, sans-serif;
+    color:white;
 
 }
 
@@ -27,7 +28,7 @@
 
 
 #play-btn{
-    background-color:rgb(236, 251, 255);
+    background-color:rgb(0, 172, 157);
     width:100px;
     height: 30px;
 }
