--- a/styles/style.css
+++ b/styles/style.css
@@ -45,6 +45,8 @@
     margin-bottom: 20px;
 }
 
+
+
 #play-btn{
     background-color:rgb(0, 172, 157);
     width:100px;
@@ -83,4 +85,9 @@ td {
 
 .piece-placed{
     background-color: rgb(82, 82, 82);
+}
+
+.next-piece{
+    background-color: rgb(255, 0, 140);
+
 }
