--- a/styles/style.css
+++ b/styles/style.css
@@ -15,7 +15,7 @@
 #buttons{
     margin: auto;
     margin-bottom: 20px;
-    width:300px;
+    width:400px;
     text-align: center;
 
 }
@@ -54,29 +54,36 @@
 
 #play-btn{
     background-color:rgb(0, 172, 157);
-    width:100px;
-    height: 30px;
+    width:200px;
+    height: 50px;
     border: none;
     border-radius: 5px;
     color:white;
+    font-size: 1.6em;
 
 }
 
 #play-btn:hover{
     background-color:rgb(217, 244, 255);
-    width:120px;
-    height: 30px;
+    /* width:120px; */
+    /* height: 30px; */
     color:white;
+    border: none;
+
 
     
 }
 
 #play-btn:active{
     background-color:rgb(183, 198, 218);
-    width:100px;
-    height: 30px;
+    /* width:100px; */
+    /* height: 30px; */
     color:white;
+    border: none;
 
+}
+#play-btn:{
+    border: none;
 }
 
 tr{
@@ -109,7 +116,7 @@ td {
 
 }
 .next-piece-background{
-    background-color: rgb(104, 104, 104);
+    background-color: rgb(255, 255, 255);
 
 }
 
